plugins {
    id 'com.gradleup.shadow' version '9.2.2' apply false
}

allprojects {
    group = 'net.hasor'
}

def pomInfo = [
        'dbvisitor'               : ['dbVisitor', 'dbVisitor is a full-featured database access tool.'],
        'dbvisitor-driver'        : ['dbVisitor JDBC Drier Adapter', 'JDBC Driver adapter module for non-relational databases.'],
        'dbvisitor-spring'        : ['dbVisitor-spring', 'Integrate dbVisitor and Spring.'],
        'dbvisitor-spring-starter': ['dbVisitor-spring-starter', 'Integrate dbVisitor and Spring Boot.'],
        'dbvisitor-hasor'         : ['dbVisitor-hasor', 'Integrate dbVisitor and Hasor.'],
        'dbvisitor-guice'         : ['dbVisitor-guice', 'Integrate dbVisitor and Guice.'],
        'dbvisitor-solon-plugin'  : ['dbvisitor-solon-plugin', 'Integrate dbVisitor and Solon.'],
        'jdbc-redis'              : ['dbVisitor Adapter of Redis', 'JDBC driver adapter for Redis.'],
        'jdbc-mongo'              : ['dbVisitor Adapter of MongoDB', 'JDBC driver adapter for MongoDB.'],
        'jdbc-milvus'             : ['dbVisitor Adapter of Milvus', 'JDBC driver adapter for Milvus.'],
        'jdbc-elastic'            : ['dbVisitor Adapter of Elastic', 'JDBC driver adapter for Elastic.'],
        'dbvisitor-test'          : ['dbVisitor Test Framework', 'TCK for dbVisitor.']
]

def pomDeps = [
        'dbvisitor'               : [
                ['net.hasor', 'cobble-all', property('lib.cobble'), 'compile', false],
                ['ognl', 'ognl', '3.4.3', 'compile', true],
                ['org.mongodb', 'mongodb-driver-sync', '5.6.2', 'compile', true],
                ['org.locationtech.jts', 'jts-core', '1.19.0', 'compile', true],
                ['com.alibaba', 'fastjson', '2.0.53', 'compile', true],
                ['com.alibaba.fastjson2', 'fastjson2', '2.0.53', 'compile', true],
                ['com.google.code.gson', 'gson', '2.11.0', 'compile', true],
                ['com.fasterxml.jackson.core', 'jackson-databind', '2.18.0', 'compile', true]
        ],
        'dbvisitor-driver'        : [
                ['net.hasor', 'cobble-all', property('lib.cobble'), 'compile', false]
        ],
        'dbvisitor-spring'        : [
                ['net.hasor', 'dbvisitor', version, 'compile', false],
                ['org.springframework', 'spring-context', '4.0.0.RELEASE', 'compile', false],
                ['org.springframework', 'spring-jdbc', '4.0.0.RELEASE', 'compile', false],
                ['javax.annotation', 'javax.annotation-api', '1.3.2', 'compile', false]
        ],
        'dbvisitor-spring-starter': [
                ['net.hasor', 'dbvisitor-spring', version, 'compile', false],
                ['org.springframework.boot', 'spring-boot-autoconfigure', '2.7.3', 'compile', true],
                ['org.springframework.boot', 'spring-boot-starter-jdbc', '2.7.3', 'compile', true],
                ['org.springframework', 'spring-beans', '5.3.23', 'compile', true]
        ],
        'dbvisitor-hasor'         : [
                ['net.hasor', 'dbvisitor', version, 'compile', false],
                ['net.hasor', 'hasor-core', '4.2.5', 'compile', false],
                ['javax.annotation', 'javax.annotation-api', '1.3.2', 'compile', false]
        ],
        'dbvisitor-guice'         : [
                ['net.hasor', 'dbvisitor', version, 'compile', false],
                ['com.google.inject', 'guice', '5.1.0', 'compile', false]
        ],
        'dbvisitor-solon-plugin'  : [
                ['net.hasor', 'dbvisitor', version, 'compile', false],
                ['org.noear', 'solon-data', '3.0.7', 'compile', false]
        ],
        'jdbc-redis'              : [
                ['net.hasor', 'dbvisitor-driver', version, 'compile', false],
                ['org.antlr', 'antlr4-runtime', property('lib.antlr'), 'compile', true]
        ],
        'jdbc-mongo'              : [
                ['net.hasor', 'dbvisitor-driver', version, 'compile', false],
                ['org.antlr', 'antlr4-runtime', property('lib.antlr'), 'compile', true]
        ],
        'jdbc-milvus'             : [
                ['net.hasor', 'dbvisitor-driver', version, 'compile', false],
                ['org.antlr', 'antlr4-runtime', property('lib.antlr'), 'compile', true]
        ],
        'jdbc-elastic'            : [
                ['net.hasor', 'dbvisitor-driver', version, 'compile', false],
                ['org.antlr', 'antlr4-runtime', property('lib.antlr'), 'compile', true]
        ]
]

subprojects {
    plugins.withType(JavaPlugin).configureEach {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(17)
            }
        }

        tasks.withType(JavaCompile).configureEach {
            options.encoding = 'UTF-8'
            options.release = 17
        }

        tasks.withType(Javadoc).configureEach {
            options.encoding = 'UTF-8'
            options.addStringOption('Xdoclint:none', '-quiet')
            failOnError = false
        }

        tasks.withType(Test).configureEach {
            useJUnit()
            ignoreFailures = true
            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.io=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.net=ALL-UNNAMED'
        }

        tasks.withType(GenerateModuleMetadata).configureEach {
            enabled = false
        }

        dependencies {
            testImplementation "junit:junit:${property('lib.junit')}"
        }

        plugins.withId('maven-publish') {
            apply plugin: 'signing'
            java {
                withSourcesJar()
                withJavadocJar()
            }

            publishing {
                publications {
                    mavenJava(MavenPublication) {
                        pom {
                            name = pomInfo[project.name][0]
                            description = pomInfo[project.name][1]
                            url = 'https://www.dbvisitor.net/'
                            licenses {
                                license {
                                    name = 'The Apache Software License, Version 2.0'
                                    url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                                }
                            }
                            developers {
                                developer {
                                    name = '赵永春(Mr.Zhao)'
                                    email = 'zyc@hasor.net'
                                }
                            }
                            scm {
                                connection = 'scm:git:git@gitee.com:zycgit/dbvisitor.git'
                                developerConnection = 'scm:git:git@gitee.com:zycgit/dbvisitor.git'
                                url = 'https://gitee.com/zycgit/dbvisitor'
                                tag = 'HEAD'
                            }
                            withXml {
                                def deps = pomDeps[project.name]
                                if (deps) {
                                    def dependenciesNode = asNode().appendNode('dependencies')
                                    deps.each {
                                        def dependencyNode = dependenciesNode.appendNode('dependency')
                                        dependencyNode.appendNode('groupId', it[0])
                                        dependencyNode.appendNode('artifactId', it[1])
                                        dependencyNode.appendNode('version', it[2])
                                        dependencyNode.appendNode('scope', it[3])
                                        if (it[4]) {
                                            dependencyNode.appendNode('optional', 'true')
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
                if (findProperty('centralBundleDir')) {
                    repositories {
                        maven {
                            name = 'centralBundle'
                            url = uri(findProperty('centralBundleDir'))
                        }
                    }
                }
            }

            afterEvaluate {
                publishing.publications.named('mavenJava', MavenPublication) {
                    if (plugins.hasPlugin('com.gradleup.shadow')) {
                        artifact(tasks.named('shadowJar')) {
                            classifier = null
                        }
                        artifact tasks.named('sourcesJar')
                        artifact tasks.named('javadocJar')
                    } else {
                        from components.java
                    }
                }
            }

            signing {
                required { findProperty('centralRelease') == 'true' }
                def signingKey = findProperty('maven.central.signing_key')
                def signingPassword = findProperty('maven.central.signing_password')
                if (signingKey) {
                    useInMemoryPgpKeys(signingKey.replace('\\n', '\n'), signingPassword)
                }
                sign publishing.publications.mavenJava
            }
        }
    }
}
